--- a/.github/workflows/set_sbi.yml
+++ b/.github/workflows/set_sbi.yml
@@ -1,56 +1,73 @@
-name: SBIタイプとフィールド設定
+name: スプリントとタイプを設定する
 on:
-  issues:
-    types: [opened]
+ issues:
+   types: [opened]
 jobs:
-  set-sbi-type:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get project data
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PROJECT_NUMBER: "1"
-          VIEW_SBI: "3"
-          FIELD_TYPE_ID: "163048810"
-          FIELD_SPRINT_ID: "163048199"
-          FIELD_PROGRESS_ID: "163048200"
-        run: |
-          # Get project ID
-          PROJECT_ID=$(gh api graphql -f query='
-            query($org: String!, $number: Int!) {
-              organization(login: $org) {
-                projectV2(number: $number) {
-                  id
-                }
-              }
-            }' -f org=$GITHUB_REPOSITORY_OWNER -f number=$PROJECT_NUMBER --jq '.data.organization.projectV2.id')
-          
-          # Get item ID
-          ITEM_ID=$(gh api graphql -f query='
-            mutation($projectId: ID!, $contentId: ID!) {
-              addProjectV2ItemById(input: {
-                projectId: $projectId
-                contentId: "${{ github.event.issue.node_id }}"
-              }) {
-                item {
-                  id
-                }
-              }
-            }' -f projectId=$PROJECT_ID --jq '.data.addProjectV2ItemById.item.id')
+ set-sbi-type:
+   runs-on: ubuntu-latest
+   steps:
+     - name: プロジェクトデータの取得 
+       env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         PROJECT_NUMBER: "1"
+         VIEW_SBI: "3"
+         FIELD_TYPE_ID: "163048810"
+         FIELD_SPRINT_ID: "163048199" 
+         FIELD_PROGRESS_ID: "163048200"
+       run: |
+         # プロジェクトIDの取得
+         PROJECT_ID=$(gh api graphql -f query='
+           query($org: String!, $number: Int!) {
+             organization(login: $org) {
+               projectV2(number: $number) {
+                 id
+               }
+             }
+           }' -f org=$GITHUB_REPOSITORY_OWNER -f number=$PROJECT_NUMBER --jq '.data.organization.projectV2.id')
+         
+         # アイテムIDの取得
+         ITEM_ID=$(gh api graphql -f query='
+           mutation($projectId: ID!, $contentId: ID!) {
+             addProjectV2ItemById(input: {
+               projectId: $projectId
+               contentId: "${{ github.event.issue.node_id }}"
+             }) {
+               item {
+                 id
+               }
+             }
+           }' -f projectId=$PROJECT_ID --jq '.data.addProjectV2ItemById.item.id')
 
-          # Update fields
-          gh api graphql -f query='
-            mutation($projectId: ID!, $itemId: ID!, $fieldId: ID!, $value: String!) {
-              updateProjectV2ItemFieldValue(input: {
-                projectId: $projectId
-                itemId: $itemId
-                fieldId: $fieldId
-                value: { 
-                  singleSelectOptionId: $value
-                }
-              }) {
-                projectV2Item {
-                  id
-                }
-              }
-            }' -f projectId=$PROJECT_ID -f itemId=$ITEM_ID -f fieldId=$FIELD_SPRINT_ID -f value="Current"
+         # スプリントを@currentに設定
+         gh api graphql -f query='
+           mutation($projectId: ID!, $itemId: ID!, $fieldId: ID!) {
+             updateProjectV2ItemFieldValue(input: {
+               projectId: $projectId
+               itemId: $itemId
+               fieldId: $fieldId
+               value: { 
+                 iterationId: "@current"
+               }
+             }) {
+               projectV2Item {
+                 id
+               }
+             }
+           }' -f projectId=$PROJECT_ID -f itemId=$ITEM_ID -f fieldId=$FIELD_SPRINT_ID
+
+         # タイプフィールドの設定
+         gh api graphql -f query='
+           mutation($projectId: ID!, $itemId: ID!, $fieldId: ID!, $value: String!) {
+             updateProjectV2ItemFieldValue(input: {
+               projectId: $projectId
+               itemId: $itemId
+               fieldId: $fieldId
+               value: { 
+                 singleSelectOptionId: $value
+               }
+             }) {
+               projectV2Item {
+                 id
+               }
+             }
+           }' -f projectId=$PROJECT_ID -f itemId=$ITEM_ID -f fieldId=$FIELD_TYPE_ID -f value="SBI"
