--- a/.github/workflows/projects_set_pbi.yml
+++ b/.github/workflows/projects_set_pbi.yml
@@ -2,15 +2,17 @@ name: PBIタイプ設定
 on:
   issues:
     types: [opened]
+
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   VIEW_ID: '1'
   PROJECT_NUMBER: "1"
-  VIEW_PBI: "1"
   FIELD_TYPE: "163048810"
+  PBI_VALUE: "PBI"
+
 jobs:
   set-pbi-type:
-    if: env.VIEW_ID == '1'
+    if: ${{ env.VIEW_ID == '1' }}
     runs-on: ubuntu-latest
     steps:
       - name: PBIタイプを設定
@@ -21,7 +23,7 @@ jobs:
                 projectId: $project
                 itemId: $item
                 fieldId: "${{ env.FIELD_TYPE }}"
-                value: "PBI"
+                value: "${{ env.PBI_VALUE }}"
               }) {
                 projectV2Item { id }
               }
