--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "wrangler pages dev",
-    "deploy": "npm run build && wrangler pages deploy"
+    "deploy": "npm run build && wrangler pages deploy",
+    "test": "vitest run"
   },
   "dependencies": {
     "hono": "^4.6.18",
@@ -18,6 +19,7 @@
     "@hono/vite-dev-server": "^0.18.1",
     "@types/uuid": "^10.0.0",
     "vite": "^5.4.12",
+    "vitest": "^3.0.4",
     "wrangler": "^3.96.0"
   }
 }
