--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     ],
     "types": [
       "@cloudflare/workers-types/2023-07-01",
-      "vite/client"
+      "vite/client",
+      "vitest/globals"
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
