--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
       "vitest/globals"
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "jsxImportSource": "react"
   },
 }
