--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@remix-run/cloudflare": "^2.8.1",
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
+    "@tailwindcss/vite": "^4.0.8",
     "hono": "^4.6.18",
     "pino": "^9.6.0",
     "react": "^18.2.0",
@@ -28,6 +29,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^10.0.0",
     "remix-hono": "^0.0.16",
+    "tailwindcss": "^4.0.8",
     "vite": "^5.4.12",
     "vitest": "^3.0.4",
     "wrangler": "^3.96.0"
