--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,13 @@
     "moduleResolution": "Bundler",
     "strict": true,
     "skipLibCheck": true,
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "types": [
       "@cloudflare/workers-types/2023-07-01",
       "vite/client",
       "vitest/globals"
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "jsxImportSource": "react"
   },
 }
