--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ dist/
 .vscode/*
 !.vscode/launch.json
 !.vscode/*.code-snippets
+!.vscode/extensions.json
+!.vscode/settings.json
 .idea/workspace.xml
 .idea/usage.statistics.xml
 .idea/shelf
