--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,5 @@
     "browser": true,
     "node": true
   },
-  "extends": ["airbnb","airbnb-typescript"]
+  "extends": ["airbnb", "airbnb-typescript", "prettier"]
 }
