--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "vitest run",
     "tsc": "tsc --noEmit",
     "lint": "eslint --ext .ts,.tsx .",
-    "lint:fix": "eslint --ext .ts,.tsx . --fix"
+    "lint:fix": "eslint --ext .ts,.tsx . --fix",
+    "fmt:check": "prettier . --check",
+    "fmt": "prettier . --write"
   },
   "dependencies": {
     "@remix-run/cloudflare": "^2.8.1",
@@ -36,6 +38,8 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^10.1.1",
+    "prettier": "3.5.3",
     "remix-hono": "^0.0.16",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3",
