--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,8 @@
     "strict": true,
     "skipLibCheck": true,
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "types": [
-      "@cloudflare/workers-types/2023-07-01",
-      "vite/client",
-      "vitest/globals"
-    ],
+    "types": ["@cloudflare/workers-types/2023-07-01", "vite/client", "vitest/globals"],
     "jsx": "react-jsx",
     "jsxImportSource": "react"
-  },
+  }
 }
