--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "preview": "wrangler pages dev",
     "deploy": "npm run build && wrangler pages deploy",
     "test": "vitest run",
-    "tsc": "tsc --noEmit",
+    "check-types": "tsc --noEmit",
     "lint": "eslint --ext .ts,.tsx .",
     "lint:fix": "eslint --ext .ts,.tsx . --fix",
     "fmt:check": "prettier . --check",
-    "fmt": "prettier . --write"
+    "fmt": "prettier . --write",
+    "ci": "npm run lint && npm run fmt:check"
   },
   "dependencies": {
     "@remix-run/cloudflare": "^2.8.1",
@@ -40,6 +41,7 @@
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^10.1.1",
     "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "remix-hono": "^0.0.16",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3",
