--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "lint": "eslint --ext .ts,.tsx .",
     "lint:fix": "eslint --ext .ts,.tsx . --fix",
     "fmt:check": "prettier . --check",
-    "fmt": "prettier . --write",
-    "ci": "npm run lint && npm run fmt:check"
+    "fmt": "prettier . --write"
   },
   "dependencies": {
     "@remix-run/cloudflare": "^2.8.1",
