--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,19 +16,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Node.jsの構築
         uses: actions/setup-node@v4
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-          
+
       - name: 依存関係のキャッシュを復元
         uses: actions/cache@v4
         id: node-modules-cache
         with:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
-          
+
       - name: ライブラリのインストール
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: npm ci
@@ -38,18 +38,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Node.jsの構築
         uses: actions/setup-node@v4
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-          
+
       - name: 依存関係のキャッシュを復元
         uses: actions/cache@v4
         with:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
-          
+
       - name: Lint
         run: npm run lint
 
@@ -58,57 +58,57 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Node.jsの構築
         uses: actions/setup-node@v4
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-          
+
       - name: 依存関係のキャッシュを復元
         uses: actions/cache@v4
         with:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
-          
+
       - name: Format
         run: npm run fmt:check
 
   test:
-    needs: setup
+    needs: [lint, format] # lint と format が成功した後に実行
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Node.jsの構築
         uses: actions/setup-node@v4
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-          
+
       - name: 依存関係のキャッシュを復元
         uses: actions/cache@v4
         with:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
-          
+
       - name: テストの実行
         run: npm run test
 
   build:
-    needs: setup
+    needs: [lint, format] # lint と format が成功した後に実行
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Node.jsの構築
         uses: actions/setup-node@v4
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-          
+
       - name: 依存関係のキャッシュを復元
         uses: actions/cache@v4
         with:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
-          
+
       - name: Build
         run: npm run build
