--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
-  db:
+  postgres:
     image: postgres:latest
-    container_name: postgres
     ports:
       - '5432:5432'
     volumes:
