--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format:fix": "prettier . --write"
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "@remix-run/cloudflare": "^2.8.1",
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
@@ -29,6 +30,7 @@
     "@cloudflare/workers-types": "^4.20241218.0",
     "@hono/vite-build": "^1.2.0",
     "@hono/vite-dev-server": "^0.18.1",
+    "@prisma/generator-helper": "^6.5.0",
     "@remix-run/dev": "^2.8.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -41,6 +43,8 @@
     "eslint-config-prettier": "^10.1.1",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "prisma": "^6.5.0",
+    "prisma-erd-generator": "^2.0.4",
     "remix-hono": "^0.0.16",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3",
