--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "my-app",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
