--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,11 @@ on:
     branches:
       - main
 
+# カバレッジの可視化で、コメントを残すための権限
+permissions:
+  contents: read
+  pull-requests: write
+
 # 連続push時に同じジョブが並列で実行されるのを防ぐ
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -114,4 +119,10 @@ jobs:
           key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
 
       - name: テストの実行
-        run: npm run test
+        run: npm run test:coverage
+
+      - name: カバレッジの可視化
+        if: github.event_name == 'pull_request'
+        uses: davelosert/vitest-coverage-report-action@v2
+        with:
+          comment-on: ${{ github.event_name == 'pull_request' && 'pr' || 'commit' }}
