--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "wrangler pages dev",
     "deploy": "npm run build && wrangler pages deploy",
     "test": "vitest run",
-    "test:coverage": "vitest run --coverage",
+    "test:frontend:coverage": "vitest run -c vitest.config.frontend.ts --coverage",
+    "test:backend:coverage": "vitest run -c vitest.config.backend.ts --coverage",
     "check-types": "tsc --noEmit",
     "lint": "eslint --ext .ts,.tsx .",
     "lint:fix": "eslint --ext .ts,.tsx . --fix",
