--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,39 +26,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Node.jsの構築
-        uses: actions/setup-node@v4
+        uses: ./.github/actions/setup_node
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-
-      - name: 依存関係のキャッシュ
-        uses: actions/cache@v4
-        id: node-modules-cache
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
-
-      - name: ライブラリのインストール
-        if: steps.node-modules-cache.outputs.cache-hit != 'true'
-        run: npm ci
 
   lint:
     needs: setup
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Node.jsの構築
-        uses: actions/setup-node@v4
+        uses: ./.github/actions/setup_node
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-
-      - name: 依存関係のキャッシュを復元
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
 
       - name: Lint
         run: npm run lint
@@ -68,17 +49,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Node.jsの構築
-        uses: actions/setup-node@v4
+        uses: ./.github/actions/setup_node
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-
-      - name: 依存関係のキャッシュを復元
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
 
       - name: Format
         run: npm run format
@@ -90,14 +64,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
-        uses: actions/setup-node@v4
+        uses: ./.github/actions/setup_node
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-      - name: 依存関係のキャッシュを復元
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
+
       - name: TypeScript型チェック
         run: npm run check-types
 
@@ -105,6 +75,12 @@ jobs:
     needs: [lint, format, ts-compile-check]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - name: Node.jsの構築
+        uses: ./.github/actions/setup_node
+        with:
+          node-version-file: ${{ env.NODE_VERSION_FILE }}
+
       - name: フロントエンドのテスト
         uses: ./.github/actions/test_cov
         with:
@@ -115,6 +91,12 @@ jobs:
     needs: [lint, format, ts-compile-check]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - name: Node.jsの構築
+        uses: ./.github/actions/setup_node
+        with:
+          node-version-file: ${{ env.NODE_VERSION_FILE }}
+
       - name: バックエンドのテスト
         uses: ./.github/actions/test_cov
         with:
