--- a/.github/actions/setup_node/action.yaml
+++ b/.github/actions/setup_node/action.yaml
@@ -24,4 +24,5 @@ runs:
 
     - name: ライブラリのインストール
       if: steps.node-modules-cache.outputs.cache-hit != 'true'
+      shell: bash
       run: npm ci
