--- a/.github/actions/test_cov/action.yaml
+++ b/.github/actions/test_cov/action.yaml
@@ -2,10 +2,10 @@ name: 'Test Composite Action'
 description: 'テストを実行し、テストカバレッジの可視化まで行うComposite Action'
 
 inputs:
-  testCommand:
+  test-command:
     description: 'テスト用のコマンド'
     required: true
-  coverageName:
+  coverage-name:
     description: 'カバレッジの名前'
     required: false
     default: ''
@@ -14,11 +14,11 @@ runs:
   using: 'composite'
   steps:
     - name: テストの実行
-      run: ${{ inputs.testCommand }}
+      run: ${{ inputs.test-command }}
 
     - name: カバレッジの可視化
       if: github.event_name == 'pull_request'
       uses: davelosert/vitest-coverage-report-action@v2
       with:
-        name: ${{ inputs.coverageName }}
+        name: ${{ inputs.coverage-name }}
         comment-on: ${{ github.event_name == 'pull_request' && 'pr' || 'commit' }}
