--- a/.github/actions/test_cov/action.yaml
+++ b/.github/actions/test_cov/action.yaml
@@ -14,6 +14,7 @@ runs:
   using: 'composite'
   steps:
     - name: テストの実行
+      shell: bash
       run: ${{ inputs.test-command }}
 
     - name: カバレッジの可視化
