--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,10 +20,11 @@ concurrency:
 
 env:
   NODE_VERSION_FILE: .node-version
+  RUNNER_OS: ubuntu-latest
 
 jobs:
   setup:
-    runs-on: ubuntu-latest
+    runs-on: ${{ env.RUNNER_OS }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -33,7 +34,7 @@ jobs:
 
   lint:
     needs: setup
-    runs-on: ubuntu-latest
+    runs-on: ${{ env.RUNNER_OS }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -46,7 +47,7 @@ jobs:
 
   format:
     needs: setup
-    runs-on: ubuntu-latest
+    runs-on: ${{ env.RUNNER_OS }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -60,7 +61,7 @@ jobs:
   # 本来であれば、概念的にコンパイルはLint/Formatと同列ではないが、実行時間短縮のために並列実行にしている
   ts-compile-check:
     needs: setup
-    runs-on: ubuntu-latest
+    runs-on: ${{ env.RUNNER_OS }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -73,7 +74,7 @@ jobs:
 
   test-frontend:
     needs: [lint, format, ts-compile-check]
-    runs-on: ubuntu-latest
+    runs-on: ${{ env.RUNNER_OS }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -89,7 +90,7 @@ jobs:
 
   test-backend:
     needs: [lint, format, ts-compile-check]
-    runs-on: ubuntu-latest
+    runs-on: ${{ env.RUNNER_OS }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
