権限を移動してみる

--- a/.github/actions/test_cov/action.yaml
+++ b/.github/actions/test_cov/action.yaml
@@ -10,6 +10,11 @@ inputs:
     required: false
     default: ''
 
+# カバレッジの可視化で、コメントを残すための権限
+permissions:
+  contents: read
+  pull-requests: write
+
 runs:
   using: 'composite'
   steps:
