--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,13 +13,29 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+# 共通の設定を定義
 env:
   NODE_VERSION_FILE: .node-version
-  RUNNER_OS: ubuntu-latest
 
+# すべてのジョブで共通の設定を定義
+defaults:
+  run:
+    shell: bash
+
+# 変数としてワークフロー全体で使用する値を定義
+# この変数はjobs.*.runs-onで使用可能
 jobs:
+  # ジョブレベルの変数を定義
+  config:
+    runs-on: ubuntu-latest
+    outputs:
+      runner: ubuntu-latest
+    steps:
+      - run: echo "Runner configured"
+
   setup:
-    runs-on: ${{ env.RUNNER_OS }}
+    needs: config
+    runs-on: ${{ needs.config.outputs.runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -29,7 +45,7 @@ jobs:
 
   lint:
     needs: setup
-    runs-on: ${{ env.RUNNER_OS }}
+    runs-on: ${{ needs.config.outputs.runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -42,7 +58,7 @@ jobs:
 
   format:
     needs: setup
-    runs-on: ${{ env.RUNNER_OS }}
+    runs-on: ${{ needs.config.outputs.runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -56,7 +72,7 @@ jobs:
   # 本来であれば、概念的にコンパイルはLint/Formatと同列ではないが、実行時間短縮のために並列実行にしている
   ts-compile-check:
     needs: setup
-    runs-on: ${{ env.RUNNER_OS }}
+    runs-on: ${{ needs.config.outputs.runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -69,7 +85,7 @@ jobs:
 
   test-frontend:
     needs: [lint, format, ts-compile-check]
-    runs-on: ${{ env.RUNNER_OS }}
+    runs-on: ${{ needs.config.outputs.runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -84,7 +100,7 @@ jobs:
 
   test-backend:
     needs: [lint, format, ts-compile-check]
-    runs-on: ${{ env.RUNNER_OS }}
+    runs-on: ${{ needs.config.outputs.runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
