fix: npm scripts

--- a/.github/actions/test_cov/action.yaml
+++ b/.github/actions/test_cov/action.yaml
@@ -16,7 +16,7 @@ runs:
   steps:
     - name: テストの実行
       shell: bash
-      run: npm run test:${{ inputs.target }}
+      run: npm run test:${{ inputs.target }}:coverage
 
     - name: カバレッジの可視化
       if: github.event_name == 'pull_request'
