--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,14 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'src/**'
+      - '.github/workflows/ci.yaml'
+
+# カバレッジの可視化で、コメントを残すための権限
+permissions:
+  contents: read
+  pull-requests: write
 
 # 連続push時に同じジョブが並列で実行されるのを防ぐ
 concurrency:
