--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ env:
   NODE_VERSION_FILE: .node-version
 
 jobs:
-  config:
+  setup-config:
     runs-on: ubuntu-latest
     outputs:
       runner: ubuntu-latest
@@ -36,11 +36,11 @@ jobs:
         uses: ./.github/actions/setup_node
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-      - run: echo "Config completed"
+      - run: echo "Setup completed"
 
   lint:
-    needs: config
-    runs-on: ${{ needs.config.outputs.runner }}
+    needs: setup-config
+    runs-on: ${{ needs.setup-config.outputs.runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -52,8 +52,8 @@ jobs:
         run: npm run lint
 
   format:
-    needs: config
-    runs-on: ${{ needs.config.outputs.runner }}
+    needs: setup-config
+    runs-on: ${{ needs.setup-config.outputs.runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -66,8 +66,8 @@ jobs:
 
   # 本来であれば、概念的にコンパイルはLint/Formatと同列ではないが、実行時間短縮のために並列実行にしている
   ts-compile-check:
-    needs: config
-    runs-on: ${{ needs.config.outputs.runner }}
+    needs: setup-config
+    runs-on: ${{ needs.setup-config.outputs.runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -78,7 +78,7 @@ jobs:
       - name: TypeScript型チェック
         run: npm run check-types
 
-  test-config:
+  setup-test:
     needs: [lint, format, ts-compile-check]
     runs-on: ubuntu-latest
     outputs:
@@ -92,8 +92,8 @@ jobs:
       - run: echo "Test configuration completed"
 
   test-frontend:
-    needs: test-config
-    runs-on: ${{ needs.test-config.outputs.test_runner }}
+    needs: setup-test
+    runs-on: ${{ needs.setup-test.outputs.test_runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -107,8 +107,8 @@ jobs:
           target: frontend
 
   test-backend:
-    needs: test-config
-    runs-on: ${{ needs.test-config.outputs.test_runner }}
+    needs: setup-test
+    runs-on: ${{ needs.setup-test.outputs.test_runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
