--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,5 @@
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": [
-    "Supabase"
-  ]
+  "cSpell.words": ["Supabase"]
 }
