--- a/.github/workflows/check_prisma.yaml
+++ b/.github/workflows/check_prisma.yaml
@@ -12,6 +12,10 @@ on:
 env:
   NODE_VERSION_FILE: .node-version
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   format:
     runs-on: ubuntu-latest
