--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,22 +90,19 @@ jobs:
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
 
-      # フロントエンド関連ファイルの差分チェック
       - name: フロントエンドの差分チェック
         id: check-frontend
         uses: ./.github/actions/diff
         with:
           subdir: src/app
 
-      # バックエンド関連ファイルの差分チェック（除外ディレクトリあり）
       - name: バックエンドの差分チェック
         id: check-backend
         uses: ./.github/actions/diff
         with:
           subdir: src
-          exclude_pattern: '^src/app/|^src/middleware/|^src/logger/'
+          exclude_pattern: 'src/app/ src/middleware/ src/logger/'
 
-      # 差分の要約を出力
       - name: 差分結果の表示
         run: |
           echo "フロントエンド差分: ${{ steps.check-frontend.outputs.diff-count }} ファイル"
