feat: prisma schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,8 @@
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": ["Supabase"]
+  "cSpell.words": [
+    "Supabase",
+    "Timestamptz"
+  ]
 }
