--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "format:fix": "prettier . --write",
     "db:gen": "npx prisma generate",
     "db:migrate": "npx prisma migrate dev --skip-seed",
+    "db:migrate:sql-only": "npx prisma migrate dev --skip-seed --skip-generate",
     "db:reset": "npx prisma migrate reset --skip-seed",
     "db:studio": "npx prisma studio"
   },
