--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@tailwindcss/vite": "^4.0.8",
+    "bcrypt": "^5.1.1",
     "hono": "^4.6.18",
     "pino": "^9.6.0",
     "react": "^18.2.0",
@@ -43,6 +44,7 @@
     "@hono/vite-dev-server": "^0.18.1",
     "@prisma/generator-helper": "^6.5.0",
     "@remix-run/dev": "^2.8.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^10.0.0",
