Configure PostgreSQL for Japanese locale and optimization
Add custom build with ja_JP.UTF-8 locale support, set Asia/Tokyo
timezone, and add performance settings including connection limits
and logging parameters

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:latest
+    build: ./postgresql
     ports:
       - 5432:5432
     volumes:
@@ -10,7 +10,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: trend_diary
-    command: postgres
+      POSTGRES_INITDB_ARGS: "--locale=ja_JP.UTF-8"
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
 
 volumes:
   postgres_data:
