--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -143,7 +143,7 @@ jobs:
         run: docker compose up -d
 
       - name: DB Migration
-        run: npm run db:migrate
+        run: DATABASE_URL=postgresql://postgres:password@localhost/trend_diary npm run db:migrate
 
       - name: バックエンドのテスト
         uses: ./.github/actions/test_cov
